# local-backlight-dimming-led-lcd-display

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: algorithm_notes.md  matlab_to_python_mapping.md  thesis_method_summary.md
examples/: compare_algorithms.py  demo_flicker_filter.py  demo_image_dimming.py
matlab/original/: algAvg.m  algMax.m
research/: README.md
src/local_backlight_dimming/: __init__.py  algorithms.py  color.py  compensation.py  display_model.py  epsilon.py  flicker_reduction.py  image_utils.py  metrics.py  optimization.py  result.py
tests/: test_algorithms.py  test_display_model.py  test_metrics.py
