[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-backlight-dimming"
version = "0.1.0"
description = "Local backlight dimming algorithms for LED-LCD displays."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ehsan Nadernejad" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.23",
  "pillow>=9.0",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
